Fixed board name overflows

--- a/src/components/BoardsMenu/css/Board.scss
+++ b/src/components/BoardsMenu/css/Board.scss
@@ -15,7 +15,16 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
     .board-name{
+        max-height: 18px;
+        overflow-y: scroll;
+
         color: #ADADAD;
+
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+    }
+    .board-name::-webkit-scrollbar{
+        display: none;
     }
     input.board-name{
         padding: 0;
