--- a/src/components/Header/css/Header.scss
+++ b/src/components/Header/css/Header.scss
@@ -7,11 +7,20 @@
         justify-content: space-between;
     
         .board-name{
+            max-height: 70px;
+            overflow-y: scroll;
+
             color: var(--clr-gray);
     
             font-family: Poppins, sans-serif;
             font-size: 50px;
             font-weight: bold;
+
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        .board-name::-webkit-scrollbar{
+            display: none;
         }
     
         .btn-menu{
